Add novas rotas, Finalização da pagina Experiencia

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-  @apply text-white;
+  @apply bg-background text-white bg-no-repeat;
   -webkit-font-smoothing: antialiased;
 }
